--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,11 @@ add_subdirectory(3rdparty/Pangolin)
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${GLUT_INCLUDE_DIRS})
 include_directories(${OPENGL_INCLUDE_DIRS})
+if(OpenNI2_FOUND)
 include_directories(${OPENNI2_INCLUDE_DIR})
-include_directories(${Pangolin_INCDIRS})
+endif()
 
+include_directories(${Pangolin_INCDIRS})
 include_directories(3rdparty/Eigen)
 include_directories(3rdparty/tinyply/source)
 include_directories(3rdparty/tinyobjloader)
@@ -147,7 +149,7 @@ add_library(one_piece SHARED ${Geometry_SRC}  ${GRANSAC_SRC}
 set(CMAKE_CXX_FLAGS " -std=c++11 ")
 set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 -msse4.2 -Wall -fopenmp") 
 if(OpenNI2_FOUND)
-    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -DWITH_OPENNI2")
+    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -DWITH_OPENNI2 -DUSING_FLOAT64")
 endif()
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
