scannnet to tum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,7 @@ add_executable(MergeMultipleSubmaps "example/MergeMultipleSubmaps.cpp")
 add_executable(RansacTest "example/RansacTest.cpp")
 add_executable(ICPTest "example/ICPTest.cpp")
 add_executable(BATest "example/BATest.cpp")
+add_executable(ScannetToTum "example/ScannetToTum.cpp")
 add_executable(GenerateModelFromScannet "example/GenerateModelFromScannet.cpp")
 add_executable(GetLabelUsingKDTree "example/GetLabelUsingKDTree.cpp")
 add_executable(FBAFusion ${FBAFusion_SRC})
@@ -285,6 +286,10 @@ target_link_libraries(ICPTest
     ${THIRD_LIB}
 )
 target_link_libraries(BATest
+    one_piece
+    ${THIRD_LIB}
+)
+target_link_libraries(ScannetToTum
     one_piece
     ${THIRD_LIB}
 )
